# todos

./: .gitignore  README.md
Bun-ElysiaJs-HTMX/: bun.lockb  package.json  todos.sqlite  tsconfig.json
Bun-ElysiaJs-HTMX/migrations/: 001_add_todo_table.sql
Bun-ElysiaJs-HTMX/src/: app.tsx
Bun-ElysiaJs-HTMX/src/back/: index.ts
Bun-ElysiaJs-HTMX/src/front/: events.ts  global.ts  index.ts  plugins.tsx  server-view-handlers.tsx  server.tsx
go-angular/: api.http
go-angular/back/: go.sum  main.go
go-angular/back/dbschema/: default.esdl
go-angular/back/models/: TodoEntity.go  dtos.go
go-angular/back/storage/: TodoStorage.go
go-angular/back/web/: ErrorHandler.go  Routes.go  TodoHandlers.go
golang-edgeDB-angular/: Makefile  api.http
golang-edgeDB-angular/back/: go.mod  go.sum  main.go
golang-edgeDB-angular/back/dbschema/: default.esdl
golang-edgeDB-angular/back/errors/: ErrorMessages.go  TodoErrors.go
golang-edgeDB-angular/back/models/: dtos.go  entities.go  requests.go  validations.go
golang-edgeDB-angular/front/: angular.json  package.json
java-postgreSQL-vueJs/back/: pom.xml
rust-surrealDB-Elm/: Makefile
rust-surrealDB-Elm/back/: Cargo.toml  config.json
rust-surrealDB-Elm/back/src/: config.rs  main.rs
rust-surrealDB-Elm/back/src/models/: dtos.rs  entities.rs  errors.rs  mod.rs  requests.rs
rust-surrealDB-Elm/back/src/services/: mod.rs  queries.rs  todo_storage.rs
rust-surrealDB-Elm/back/src/web/: cors.rs  error_handlers.rs  mod.rs  routes.rs
rust-surrealDB-Elm/back/static/: index.html
rust-surrealDB-Elm/front/: elm.json  index.html
(+133 files in other folders)
