[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.176", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["v4"] }
serde_json = "1.0.104"